# leap.js

./: INSTALL  NEWS  NOTES  README  TODO  leap-1.2.6.lsm  leap.data  leap.html  leap.js  leap.min.js
configs/: vars
doc/: DOWNLOADING  FAQ.html  baseinstall.README  demo.install  history.dev  user_guide.htm
help/: helppgs
scripts/: all2dos  dmalloc.env  install.date.src  install.korth.src  install.src  leapconv  notify  unix2dos
scripts/users/: README  buildtar  leapinstall
scripts/utility/: README  all2dos  leapconv  unix2dos
src/: Makefile.in  README  algebra_parser.c  attribs.c  attributes.c  cond.c  configure  configure.in  convert.c  database.c  dbase.c  dumprel.c  errors.c  generic_parser.c  global_vars.c  globals.c  hashing.c  info.c  leap.c  leapd.c  leapio.c  orig_parser.c  p_stack.c  parser.c  pointer_stack.c  regexp.c  relation.c  relational_ops.c  rtional.c  testutil.c  tuples.c  util.c  vars.c
src/include/: algebra_parser.h  attribs.h  attributes.h  cond.h  consts.h  database.h  dbase.h  defines.hin  dtypes.h  errors.h  generic_parser.h  global_vars.h  globals.h  hashing.h  info.h  leapio.h  orig_parser.h  p_stack.h  parser.h  pointer_stack.h  regexp.h  relation.h  relational_ops.h  rtional.h  tuples.h  util.h  vars.h
src/parse/: Makefile  Makefile.in  README  algebra.c  algebra.l  algebra.yy  leap_parser.c  leap_parser.h
src/parse/include/: algebra.h
src/winleap/: EXEC_OBJ.CPP  EXEC_OBJ.H  LEAPEXEC.CPP  LEAPEXEC.DFM  LEAPEXEC.H  LISTEN.CPP  LISTEN.H  README  SPLASH.CPP  SPLASH.DFM  SPLASH.H  WINLEAP.CPP  WINLEAP.MAK
