dnl configure.in,v 1.203 2001/04/26 13:07:13 rleyton Exp
dnl Process this file with autoconf to produce a configure script.
AC_INIT(leap.c)
AC_CONFIG_HEADER(include/defines.h:include/defines.hin)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(stdarg.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(strstr)
AC_CHECK_FUNCS(strchr)

dnl Check for long file names
AC_SYS_LONG_FILE_NAMES

AC_ARG_WITH(readline, --with-readline support fancy command line editing,
LIBS="$LIBS -lreadline -ltermcap"
AC_DEFINE(HAVE_READLINE)
AC_DEFINE(HAVE_HISTORY)

)

AC_ARG_ENABLE(debug, --disable-debug disable support for debug output,
	if test "$enableval" = yes ; then
		AC_DEFINE(DEBUG_CODE)
	fi
 , AC_DEFINE(DEBUG_CODE)
)

AC_OUTPUT(Makefile)
